--- a/assets/css/admin-portal.css
+++ b/assets/css/admin-portal.css
@@ -789,6 +789,92 @@
   cursor: pointer;
 }
 
+/* edit course page */
+#adminEditCourse .current-image-preview {
+  width: 100%;
+  max-width: 50rem;
+  max-height: 30rem;
+  margin: 0 auto;
+  object-fit: cover;
+  border: var(--border);
+  border-radius: 0.5rem;
+}
+#adminEditCourse .search-teacher .teacher-container,
+#adminEditCourse .selected-teachers {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+#adminEditCourse .search-teacher .teacher-card,
+#adminEditCourse .selected-teachers .teacher-card {
+  width: calc((100% / 3) - 0.7rem);
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  background-color: var(--secondary-color);
+  border: var(--border);
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: ease 0.3s;
+  position: relative;
+}
+#adminEditCourse .selected-teachers .teacher-card {
+  cursor: initial;
+  position: relative;
+  background-color: #fff5f1;
+  border-color: #ffbe9d;
+  box-shadow: var(--box-shadow-light);
+}
+#adminEditCourse .search-teacher .teacher-card:hover {
+  background-color: var(--primary-color);
+  box-shadow: var(--box-shadow-medium);
+}
+#adminEditCourse .search-teacher .teacher-image,
+#adminEditCourse .selected-teachers .teacher-image {
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 0.3rem;
+  object-fit: cover;
+  border: var(--border);
+}
+#adminEditCourse .search-teacher .teacher-name,
+#adminEditCourse .selected-teachers .teacher-name {
+  color: var(--text-color);
+  font-family: var(--text-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--text-font-size);
+}
+#adminEditCourse .search-teacher .teacher-status {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background-color: #fff;
+  color: var(--dark-text-color);
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: 0.8rem;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.3rem;
+  z-index: 1;
+}
+#adminEditCourse .search-teacher .teacher-status.available {
+  background-color: lightgreen;
+}
+#adminEditCourse .search-teacher .teacher-card:hover .teacher-name {
+  color: #fff;
+}
+#adminEditCourse .selected-teachers .remove-teacher {
+  position: absolute;
+  top: 0.2rem;
+  right: 0.4rem;
+  background-color: transparent;
+  color: crimson;
+  border: none;
+  font-size: 0.85rem;
+  cursor: pointer;
+}
+
 /* payments page */
 #adminPayments .filter-container {
   flex-direction: row-reverse;
