--- a/assets/css/course-portal.css
+++ b/assets/css/course-portal.css
@@ -1,4 +1,3 @@
-/* course details page */
 #courseDetails .course-details {
   align-items: flex-start;
 }
@@ -29,25 +28,30 @@
   margin-top: 1rem;
   padding-bottom: 0.5rem;
 }
-#courseDetails .class-schedule ul {
+#courseDetails .session-details ul {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
-#courseDetails .class-schedule li,
+#courseDetails .session-details li,
 #courseDetails .teacher-name,
 #courseDetails .student-name {
   font-size: var(--accent-font-size);
   font-family: var(--accent-font-family);
   font-weight: var(--accent-font-weight);
   color: var(--dark-text-color);
+  text-decoration: none;
+}
+#courseDetails .teacher-name:hover,
+#courseDetails .student-name:hover {
+  color: var(--accent-color);
 }
 #courseDetails .teacher-name {
   font-size: 1.2rem;
   font-weight: 700;
 }
-#courseDetails .class-schedule .value,
+#courseDetails .session-details .value,
 #courseDetails .teacher-data,
 #courseDetails .student-data {
   font-size: var(--text-font-size);
@@ -70,13 +74,10 @@
 #courseDetails .teacher-data a {
   text-decoration: none;
   color: var(--primary-color);
-  border-bottom: var(--border);
-  border-color: var(--primary-color);
   font-weight: var(--accent-font-weight);
 }
 #courseDetails .teacher-data a:hover {
   color: var(--accent-color);
-  border-color: var(--accent-color);
 }
 #courseDetails .teacher-image {
   width: 10rem;
@@ -177,6 +178,18 @@
   border: var(--border);
   border-radius: 0.3rem;
 }
+#courseDetails .course-sidebar .student-ttendance-select {
+  padding: 0.7rem !important;
+  height: auto !important;
+  display: inline-block;
+  text-align: center;
+  font-weight: var(--accent-font-weight) !important;
+  font-size: var(--accent-font-size) !important;
+}
+#courseDetails .course-sidebar .student-ttendance-select:hover {
+  border-color: var(--primary-color) !important;
+  color: var(--primary-color) !important;
+}
 #courseDetails .material-link-container {
   align-items: center;
 }
@@ -223,22 +236,42 @@
   color: white;
 }
 /* reprogram class modal */
-#reprogramModal .modal-content {
+#sessionReprogramModal .modal-content {
   background-color: var(--gray-background-color);
   margin: 3% auto;
   padding: 2rem;
   border-radius: 0.5rem;
   width: 100%;
-  max-width: 60rem;
+  max-width: 50rem;
   position: relative;
 }
-#reprogramModal form {
+#sessionReprogramModal form {
   width: 100% !important;
 }
-#reprogramModal label {
+#sessionReprogramModal label {
   text-align: left;
 }
-#reprogramModal .modal-button.confirm {
+#sessionReprogramModal .modal-button.confirm {
+  background-color: var(--primary-color);
+  color: white;
+}
+/* teacher attendance modal */
+#teacherAttendanceModal .modal-content {
+  background-color: var(--gray-background-color);
+  margin: 5% auto;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  width: 100%;
+  max-width: 45rem;
+  position: relative;
+}
+#teacherAttendanceModal form {
+  width: 100% !important;
+}
+#teacherAttendanceModal label {
+  text-align: left;
+}
+#teacherAttendanceModal .modal-button.confirm {
   background-color: var(--primary-color);
   color: white;
 }
@@ -413,8 +446,8 @@
 }
 #courseResources .file-delete {
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0.95rem;
+  right: 3.5rem;
   z-index: 1;
   border: none;
   background: transparent;
@@ -429,6 +462,8 @@
 }
 #courseResources .file-bottom {
   width: 100%;
+  height: 10rem;
+  align-items: start;
   background-color: var(--gray-background-color);
   padding: 1rem;
 }
@@ -457,6 +492,10 @@
   color: var(--accent-color);
 }
 #courseResources .download-button {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1;
   display: flex;
   align-items: center;
   justify-content: center;
