--- a/assets/css/parent-portal.css
+++ b/assets/css/parent-portal.css
@@ -255,6 +255,25 @@
 #parentChildDetails .course-btn:hover {
   background-color: var(--accent-color);
 }
+#parentChildDetails .chart-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+#parentChildDetails .chart-card {
+  flex: 1 1 30%;
+  background: var(--gray-background-color);
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+#parentChildDetails .chart-card .chart-heading {
+  font-family: var(--accent-font-family);
+  font-weight: var(--accent-font-weight);
+  font-size: var(--accent-font-size);
+  color: var(--dark-text-color);
+  margin-bottom: 1rem;
+  text-align: center;
+}
 
 /* add child page */
 #parentAddChild form .section {
